force-app/main/default/objects/openq__Mapping_Settings__c/openq__Mapping_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Mapping Settings</label>
</CustomObject>