force-app/main/default/objects/openq__Mapping_Settings__c/fields/openq__Mapping_Contact_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>openq__Mapping_Contact_Image_ID__c</fullName>
    <label>Mapping Contact Image ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>