force-app/main/default/objects/openq__Mapping_Settings__c/fields/openq__Trials_Color__c.field-meta.xml
<CustomField>
    <fullName>openq__Trials_Color__c</fullName>
    <label>Trials Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>